<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2099C8">

        <Spinner
            android:id="@+id/cities_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:entries="@array/cities"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/title_textview"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="Change City"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cities_spinner"
            app:layout_constraintEnd_toStartOf="@+id/cities_spinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cities_spinner" />

        <TextView

            android:id="@+id/temp_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/temp"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cities_spinner" />

        <TextView
            android:id="@+id/temp_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="27C"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/temp_title_textview"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="@+id/temp_title_textview"
            app:layout_constraintTop_toBottomOf="@+id/temp_title_textview" />

        <TextView
            android:id="@+id/pressure_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"

            android:text="@string/pressure"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/pressure_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp_barrier" />

        <TextView
            android:id="@+id/pressure_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            tools:text="0"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/pressure_title_textview"
            app:layout_constraintEnd_toStartOf="@+id/humidity_title_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pressure_title_textview"
            app:layout_constraintTop_toTopOf="@+id/pressure_title_textview" />

        <TextView
            android:id="@+id/humidity_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/humidity"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/humidity_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pressure_textview"
            app:layout_constraintTop_toBottomOf="@+id/temp_barrier" />

        <TextView
            android:id="@+id/humidity_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/humidity_title_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/humidity_title_textview"
            app:layout_constraintTop_toTopOf="@+id/humidity_title_textview"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_button_background"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/min_temp_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/min_temp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/min_temp_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp_textview" />

        <TextView
            android:id="@+id/min_temp_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            tools:text="2900C"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/max_temp_title_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/min_temp_title_textview"
            app:layout_constraintTop_toBottomOf="@+id/temp_textview" />

        <TextView
            android:id="@+id/max_temp_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/max_temp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/max_temp_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/min_temp_textview"
            app:layout_constraintTop_toBottomOf="@+id/temp_textview" />

        <TextView
            android:id="@+id/max_temp_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="000C"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/max_temp_title_textview"
            app:layout_constraintTop_toBottomOf="@+id/temp_textview" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/temp_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="max_temp_textview,min_temp_title_textview,min_temp_textview,max_temp_title_textview"
            tools:layout_editor_absoluteY="731dp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/temp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="temp_textview ,temp_title_textview  ,max_temp_title_textview ,max_temp_textview,min_temp_title_textview ,min_temp_textview "
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/weatehr_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="save_button,humidity_textview ,humidity_title_textview ,temp_textview ,temp_title_textview ,pressure_textview,pressure_title_textview ,max_temp_title_textview ,max_temp_textview,min_temp_title_textview ,min_temp_textview "
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
